// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`jsx props transform > should not work with array props 1`] = `
"import { template as _template$, child as _child$, patchAttr as _patchAttr$, memoEffect as _memoEffect$, insert as _insert$ } from "essor";
const _t$ = _template$("<div><!></div>");
function testFunction([prop1, prop2], otherProps) {
  return (() => {
    const _root$ = _t$();
    const _n$ = _child$(_root$);
    _memoEffect$(_p$ => {
      var _v$ = prop1;
      _v$ !== _p$.a0 && _patchAttr$(_root$, "prop1", _p$.a0, _p$.a0 = _v$);
      var _v$2 = prop2;
      _v$2 !== _p$.a1 && _patchAttr$(_root$, "prop2", _p$.a1, _p$.a1 = _v$2);
      return _p$;
    }, {
      a0: undefined,
      a1: undefined
    });
    _insert$(_root$, () => otherProps, _n$);
    return _root$;
  })();
}"
`;

exports[`jsx props transform > should not work with not pattern props 1`] = `
"import { template as _template$, patchAttr as _patchAttr$, memoEffect as _memoEffect$ } from "essor";
const _t$ = _template$("<div></div>");
function testFunction(prop1, prop2) {
  return (() => {
    const _root$ = _t$();
    _memoEffect$(_p$ => {
      var _v$ = prop1;
      _v$ !== _p$.a0 && _patchAttr$(_root$, "prop1", _p$.a0, _p$.a0 = _v$);
      var _v$2 = prop2;
      _v$2 !== _p$.a1 && _patchAttr$(_root$, "prop2", _p$.a1, _p$.a1 = _v$2);
      return _p$;
    }, {
      a0: undefined,
      a1: undefined
    });
    return _root$;
  })();
}"
`;

exports[`jsx props transform > should replace function parameter with "props" 1`] = `
"import { template as _template$, patchAttr as _patchAttr$, memoEffect as _memoEffect$ } from "essor";
const _t$ = _template$("<div></div>");
function testFunction(__props) {
  return (() => {
    const _root$ = _t$();
    _memoEffect$(_p$ => {
      var _v$ = __props.prop1;
      _v$ !== _p$.a0 && _patchAttr$(_root$, "prop1", _p$.a0, _p$.a0 = _v$);
      var _v$2 = __props.prop2;
      _v$2 !== _p$.a1 && _patchAttr$(_root$, "prop2", _p$.a1, _p$.a1 = _v$2);
      return _p$;
    }, {
      a0: undefined,
      a1: undefined
    });
    return _root$;
  })();
}"
`;

exports[`jsx props transform > should replace function parameter with 'props' when it's an object 1`] = `
"import { template as _template$, child as _child$, patchAttr as _patchAttr$, memoEffect as _memoEffect$, insert as _insert$ } from "essor";
const _t$ = _template$("<div><!></div>");
function testFunction(__props, otherProps) {
  return (() => {
    const _root$ = _t$();
    const _n$ = _child$(_root$);
    _memoEffect$(_p$ => {
      var _v$ = __props.prop1;
      _v$ !== _p$.a0 && _patchAttr$(_root$, "prop1", _p$.a0, _p$.a0 = _v$);
      var _v$2 = __props.prop2;
      _v$2 !== _p$.a1 && _patchAttr$(_root$, "prop2", _p$.a1, _p$.a1 = _v$2);
      return _p$;
    }, {
      a0: undefined,
      a1: undefined
    });
    _insert$(_root$, () => otherProps, _n$);
    return _root$;
  })();
}"
`;

exports[`jsx props transform > should work just rest props 1`] = `
"import { template as _template$, patchAttr as _patchAttr$, memoEffect as _memoEffect$ } from "essor";
const _t$ = _template$("<div></div>");
function testFunction(restProps) {
  return (() => {
    const _root$ = _t$();
    _memoEffect$(_p$ => {
      var _v$ = restProps.$prop1;
      _v$ !== _p$.a0 && _patchAttr$(_root$, "prop1", _p$.a0, _p$.a0 = _v$);
      var _v$2 = restProps.prop2;
      _v$2 !== _p$.a1 && _patchAttr$(_root$, "prop2", _p$.a1, _p$.a1 = _v$2);
      var _v$3 = {
        ...restProps
      };
      _v$3 !== _p$.a2 && _patchAttr$(_root$, "rest", _p$.a2, _p$.a2 = _v$3);
      return _p$;
    }, {
      a0: undefined,
      a1: undefined,
      a2: undefined
    });
    return _root$;
  })();
}"
`;

exports[`jsx props transform > should work with array destructuring in object pattern 1`] = `
"import { template as _template$, patchAttr as _patchAttr$, memoEffect as _memoEffect$ } from "essor";
const _t$ = _template$("<div></div>");
function testFunction(__props) {
  return (() => {
    const _root$ = _t$();
    _memoEffect$(_p$ => {
      var _v$ = first;
      _v$ !== _p$.a0 && _patchAttr$(_root$, "first", _p$.a0, _p$.a0 = _v$);
      var _v$2 = second;
      _v$2 !== _p$.a1 && _patchAttr$(_root$, "second", _p$.a1, _p$.a1 = _v$2);
      return _p$;
    }, {
      a0: undefined,
      a1: undefined
    });
    return _root$;
  })();
}"
`;

exports[`jsx props transform > should work with arrow functions in class properties 1`] = `
"import { template as _template$, patchAttr as _patchAttr$, memoEffect as _memoEffect$ } from "essor";
const _t$ = _template$("<div></div>");
class TestClass {
  handler = __props => {
    return (() => {
      const _root$ = _t$();
      _memoEffect$(_p$ => {
        var _v$ = __props.prop1;
        _v$ !== _p$.a0 && _patchAttr$(_root$, "prop1", _p$.a0, _p$.a0 = _v$);
        var _v$2 = __props.prop2;
        _v$2 !== _p$.a1 && _patchAttr$(_root$, "prop2", _p$.a1, _p$.a1 = _v$2);
        return _p$;
      }, {
        a0: undefined,
        a1: undefined
      });
      return _root$;
    })();
  };
}"
`;

exports[`jsx props transform > should work with async functions 1`] = `
"import { template as _template$, patchAttr as _patchAttr$, memoEffect as _memoEffect$ } from "essor";
const _t$ = _template$("<div></div>");
async function testFunction(__props) {
  const result = await someAsyncOperation();
  return (() => {
    const _root$ = _t$();
    _memoEffect$(_p$ => {
      var _v$ = __props.prop1;
      _v$ !== _p$.a0 && _patchAttr$(_root$, "prop1", _p$.a0, _p$.a0 = _v$);
      var _v$2 = __props.prop2;
      _v$2 !== _p$.a1 && _patchAttr$(_root$, "prop2", _p$.a1, _p$.a1 = _v$2);
      var _v$3 = result;
      _v$3 !== _p$.a2 && _patchAttr$(_root$, "result", _p$.a2, _p$.a2 = _v$3);
      return _p$;
    }, {
      a0: undefined,
      a1: undefined,
      a2: undefined
    });
    return _root$;
  })();
}"
`;

exports[`jsx props transform > should work with async generator functions 1`] = `
"import { template as _template$, patchAttr as _patchAttr$, memoEffect as _memoEffect$ } from "essor";
const _t$ = _template$("<div></div>");
async function* testFunction(__props) {
  return (() => {
    const _root$ = _t$();
    _memoEffect$(_p$ => {
      var _v$ = __props.prop2;
      _v$ !== _p$.a0 && _patchAttr$(_root$, "prop2", _p$.a0, _p$.a0 = _v$);
      return _p$;
    }, {
      a0: undefined
    });
    return _root$;
  })();
}"
`;

exports[`jsx props transform > should work with class methods 1`] = `
"import { template as _template$, patchAttr as _patchAttr$, memoEffect as _memoEffect$ } from "essor";
const _t$ = _template$("<div></div>");
class TestClass {
  method({
    prop1,
    prop2
  }) {
    return (() => {
      const _root$ = _t$();
      _memoEffect$(_p$ => {
        var _v$ = prop1;
        _v$ !== _p$.a0 && _patchAttr$(_root$, "prop1", _p$.a0, _p$.a0 = _v$);
        var _v$2 = prop2;
        _v$2 !== _p$.a1 && _patchAttr$(_root$, "prop2", _p$.a1, _p$.a1 = _v$2);
        return _p$;
      }, {
        a0: undefined,
        a1: undefined
      });
      return _root$;
    })();
  }
}"
`;

exports[`jsx props transform > should work with complex nested patterns 1`] = `
"import { resolveDefaultProps as _resolveDefaultProps$, template as _template$, patchAttr as _patchAttr$, memoEffect as _memoEffect$ } from "essor";
const _t$ = _template$("<div></div>");
function testFunction(__props) {
  __props = _resolveDefaultProps$(__props, {
    user: {
      theme: 'light',
      settings: {}
    }
  });
  return (() => {
    const _root$ = _t$();
    _memoEffect$(_p$ => {
      var _v$ = __props.user.name;
      _v$ !== _p$.a0 && _patchAttr$(_root$, "name", _p$.a0, _p$.a0 = _v$);
      var _v$2 = primary;
      _v$2 !== _p$.a1 && _patchAttr$(_root$, "primary", _p$.a1, _p$.a1 = _v$2);
      var _v$3 = others;
      _v$3 !== _p$.a2 && _patchAttr$(_root$, "others", _p$.a2, _p$.a2 = _v$3);
      var _v$4 = __props.user.settings.theme;
      _v$4 !== _p$.a3 && _patchAttr$(_root$, "theme", _p$.a3, _p$.a3 = _v$4);
      var _v$5 = otherSettings;
      _v$5 !== _p$.a4 && _patchAttr$(_root$, "settings", _p$.a4, _p$.a4 = _v$5);
      return _p$;
    }, {
      a0: undefined,
      a1: undefined,
      a2: undefined,
      a3: undefined,
      a4: undefined
    });
    return _root$;
  })();
}"
`;

exports[`jsx props transform > should work with computed property names 1`] = `
"import { template as _template$, patchAttr as _patchAttr$, memoEffect as _memoEffect$ } from "essor";
const _t$ = _template$("<div></div>");
function testFunction(__props) {
  return (() => {
    const _root$ = _t$();
    _memoEffect$(_p$ => {
      var _v$ = __props.computedProp;
      _v$ !== _p$.a0 && _patchAttr$(_root$, "prop", _p$.a0, _p$.a0 = _v$);
      return _p$;
    }, {
      a0: undefined
    });
    return _root$;
  })();
}"
`;

exports[`jsx props transform > should work with deep props 1`] = `
"import { template as _template$, patchAttr as _patchAttr$, memoEffect as _memoEffect$ } from "essor";
const _t$ = _template$("<div></div>");
function testFunction(__props) {
  return (() => {
    const _root$ = _t$();
    _memoEffect$(_p$ => {
      var _v$ = __props.prop1.prop2.prop3.prop4;
      _v$ !== _p$.a0 && _patchAttr$(_root$, "prop4", _p$.a0, _p$.a0 = _v$);
      var _v$2 = __props.prop1.prop2.prop3.prop5;
      _v$2 !== _p$.a1 && _patchAttr$(_root$, "prop5", _p$.a1, _p$.a1 = _v$2);
      return _p$;
    }, {
      a0: undefined,
      a1: undefined
    });
    return _root$;
  })();
}"
`;

exports[`jsx props transform > should work with default values 1`] = `
"import { resolveDefaultProps as _resolveDefaultProps$, template as _template$, patchAttr as _patchAttr$, memoEffect as _memoEffect$ } from "essor";
const _t$ = _template$("<div></div>");
function testFunction(__props) {
  __props = _resolveDefaultProps$(__props, {
    prop1: 'default1',
    prop2: 42
  });
  return (() => {
    const _root$ = _t$();
    _memoEffect$(_p$ => {
      var _v$ = __props.prop1;
      _v$ !== _p$.a0 && _patchAttr$(_root$, "prop1", _p$.a0, _p$.a0 = _v$);
      var _v$2 = __props.prop2;
      _v$2 !== _p$.a1 && _patchAttr$(_root$, "prop2", _p$.a1, _p$.a1 = _v$2);
      return _p$;
    }, {
      a0: undefined,
      a1: undefined
    });
    return _root$;
  })();
}"
`;

exports[`jsx props transform > should work with function parameters 1`] = `
"import { resolveDefaultProps as _resolveDefaultProps$, template as _template$, delegateEvents as _delegateEvents$ } from "essor";
const _t$ = _template$("<button>Click me</button>");
function testFunction(__props) {
  __props = _resolveDefaultProps$(__props, {
    callback: () => {}
  });
  return (() => {
    const _root$ = _t$();
    _root$["_$click"] = __props.callback;
    return _root$;
  })();
}
_delegateEvents$(["click"]);"
`;

exports[`jsx props transform > should work with generator functions 1`] = `
"import { template as _template$, patchAttr as _patchAttr$, memoEffect as _memoEffect$ } from "essor";
const _t$ = _template$("<div></div>");
function* testFunction({
  prop1,
  prop2
}) {
  yield (() => {
    const _root$ = _t$();
    _memoEffect$(_p$ => {
      var _v$ = prop1;
      _v$ !== _p$.a0 && _patchAttr$(_root$, "prop1", _p$.a0, _p$.a0 = _v$);
      return _p$;
    }, {
      a0: undefined
    });
    return _root$;
  })();
  yield (() => {
    const _root$2 = _t$();
    _memoEffect$(_p$ => {
      var _v$2 = prop2;
      _v$2 !== _p$.a0 && _patchAttr$(_root$2, "prop2", _p$.a0, _p$.a0 = _v$2);
      return _p$;
    }, {
      a0: undefined
    });
    return _root$2;
  })();
}"
`;

exports[`jsx props transform > should work with multiple parameters including object pattern 1`] = `
"import { template as _template$, patchAttr as _patchAttr$, memoEffect as _memoEffect$ } from "essor";
const _t$ = _template$("<div></div>");
function testFunction(first, {
  prop1,
  prop2
}, last) {
  return (() => {
    const _root$ = _t$();
    _memoEffect$(_p$ => {
      var _v$ = first;
      _v$ !== _p$.a0 && _patchAttr$(_root$, "first", _p$.a0, _p$.a0 = _v$);
      var _v$2 = prop1;
      _v$2 !== _p$.a1 && _patchAttr$(_root$, "prop1", _p$.a1, _p$.a1 = _v$2);
      var _v$3 = prop2;
      _v$3 !== _p$.a2 && _patchAttr$(_root$, "prop2", _p$.a2, _p$.a2 = _v$3);
      var _v$4 = last;
      _v$4 !== _p$.a3 && _patchAttr$(_root$, "last", _p$.a3, _p$.a3 = _v$4);
      return _p$;
    }, {
      a0: undefined,
      a1: undefined,
      a2: undefined,
      a3: undefined
    });
    return _root$;
  })();
}"
`;

exports[`jsx props transform > should work with nested destructuring and defaults 1`] = `
"import { resolveDefaultProps as _resolveDefaultProps$, template as _template$, patchAttr as _patchAttr$, memoEffect as _memoEffect$ } from "essor";
const _t$ = _template$("<div></div>");
function testFunction(__props) {
  __props = _resolveDefaultProps$(__props, {
    name: 'John',
    age: 25,
    user: {}
  });
  return (() => {
    const _root$ = _t$();
    _memoEffect$(_p$ => {
      var _v$ = __props.user.name;
      _v$ !== _p$.a0 && _patchAttr$(_root$, "name", _p$.a0, _p$.a0 = _v$);
      var _v$2 = __props.user.age;
      _v$2 !== _p$.a1 && _patchAttr$(_root$, "age", _p$.a1, _p$.a1 = _v$2);
      return _p$;
    }, {
      a0: undefined,
      a1: undefined
    });
    return _root$;
  })();
}"
`;

exports[`jsx props transform > should work with nested function declarations 1`] = `
"import { template as _template$, patchAttr as _patchAttr$, memoEffect as _memoEffect$ } from "essor";
const _t$ = _template$("<div></div>");
function outer() {
  function inner(__props) {
    return (() => {
      const _root$ = _t$();
      _memoEffect$(_p$ => {
        var _v$ = __props.prop1;
        _v$ !== _p$.a0 && _patchAttr$(_root$, "prop1", _p$.a0, _p$.a0 = _v$);
        var _v$2 = __props.prop2;
        _v$2 !== _p$.a1 && _patchAttr$(_root$, "prop2", _p$.a1, _p$.a1 = _v$2);
        return _p$;
      }, {
        a0: undefined,
        a1: undefined
      });
      return _root$;
    })();
  }
  return inner;
}"
`;

exports[`jsx props transform > should work with nested function declarations with rest props 1`] = `
"import { omitProps as _omitProps$, template as _template$, patchAttr as _patchAttr$, memoEffect as _memoEffect$ } from "essor";
const _t$ = _template$("<div></div>");
function outer() {
  function inner(__props) {
    const restProps = _omitProps$(__props, ["prop1", "prop2"]);
    return (() => {
      const _root$ = _t$();
      _memoEffect$(_p$ => {
        var _v$ = __props.prop1;
        _v$ !== _p$.a0 && _patchAttr$(_root$, "prop1", _p$.a0, _p$.a0 = _v$);
        var _v$2 = __props.prop2;
        _v$2 !== _p$.a1 && _patchAttr$(_root$, "prop2", _p$.a1, _p$.a1 = _v$2);
        var _v$3 = {
          ...restProps
        };
        _v$3 !== _p$.a2 && _patchAttr$(_root$, "rest", _p$.a2, _p$.a2 = _v$3);
        return _p$;
      }, {
        a0: undefined,
        a1: undefined,
        a2: undefined
      });
      return _root$;
    })();
  }
  return inner;
}"
`;

exports[`jsx props transform > should work with object method shorthand 1`] = `
"import { template as _template$, patchAttr as _patchAttr$, memoEffect as _memoEffect$ } from "essor";
const _t$ = _template$("<div></div>");
const obj = {
  method({
    prop1,
    prop2
  }) {
    return (() => {
      const _root$ = _t$();
      _memoEffect$(_p$ => {
        var _v$ = prop1;
        _v$ !== _p$.a0 && _patchAttr$(_root$, "prop1", _p$.a0, _p$.a0 = _v$);
        var _v$2 = prop2;
        _v$2 !== _p$.a1 && _patchAttr$(_root$, "prop2", _p$.a1, _p$.a1 = _v$2);
        return _p$;
      }, {
        a0: undefined,
        a1: undefined
      });
      return _root$;
    })();
  }
};"
`;

exports[`jsx props transform > should work with rest pattern props 1`] = `
"import { omitProps as _omitProps$, template as _template$, patchAttr as _patchAttr$, memoEffect as _memoEffect$ } from "essor";
const _t$ = _template$("<div></div>");
function testFunction(__props) {
  const restProps = _omitProps$(__props, ["prop1", "prop2"]);
  return (() => {
    const _root$ = _t$();
    _memoEffect$(_p$ => {
      var _v$ = __props.prop1;
      _v$ !== _p$.a0 && _patchAttr$(_root$, "prop1", _p$.a0, _p$.a0 = _v$);
      var _v$2 = __props.prop2;
      _v$2 !== _p$.a1 && _patchAttr$(_root$, "prop2", _p$.a1, _p$.a1 = _v$2);
      var _v$3 = restProps;
      _v$3 !== _p$.sp2 && _patchAttr$(_root$, "_$spread$", _p$.sp2, _p$.sp2 = _v$3);
      return _p$;
    }, {
      a0: undefined,
      a1: undefined,
      sp2: undefined
    });
    return _root$;
  })();
}"
`;

exports[`jsx props transform > should work with rest value props 1`] = `
"import { omitProps as _omitProps$, template as _template$, patchAttr as _patchAttr$, memoEffect as _memoEffect$ } from "essor";
const _t$ = _template$("<div></div>");
function testFunction(__props) {
  const restProps = _omitProps$(__props, ["prop1", "prop2"]);
  return (() => {
    const _root$ = _t$();
    _memoEffect$(_p$ => {
      var _v$ = __props.prop1;
      _v$ !== _p$.a0 && _patchAttr$(_root$, "prop1", _p$.a0, _p$.a0 = _v$);
      var _v$2 = __props.prop2;
      _v$2 !== _p$.a1 && _patchAttr$(_root$, "prop2", _p$.a1, _p$.a1 = _v$2);
      var _v$3 = {
        ...restProps
      };
      _v$3 !== _p$.a2 && _patchAttr$(_root$, "rest", _p$.a2, _p$.a2 = _v$3);
      return _p$;
    }, {
      a0: undefined,
      a1: undefined,
      a2: undefined
    });
    return _root$;
  })();
}"
`;
